tests/NormalTests/paczka1/fuzzy1/50783541.err
Error in line 16: A794 A794 24,2
Error in line 13: qKrkT8xwc A426 7,2
Error in line 21: qKrkT8xwc A794 0,5
Error in line 36: AQA3 A426 90,8
Error in line 25: jLlf75t7a A426 1,7
